src/test/ui/associated-types/point-at-type-on-obligation-failure.stderr
error[E0271]: type mismatch resolving `<Foo2 as Bar2>::Ok == ()`
  --> $DIR/point-at-type-on-obligation-failure.rs:14:5
   |
LL |     type Sibling = Foo2;
   |     ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `u32`
   |
note: required by a bound in `Bar::Sibling`
  --> $DIR/point-at-type-on-obligation-failure.rs:3:24
   |
LL |     type Sibling: Bar2<Ok=Self::Ok>;
   |                        ^^^^^^^^^^^ required by this bound in `Bar::Sibling`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
